trunk/lancom/plt_project/chitra_lancom_4/BlockParser.java
// $ANTLR 3.0.1 /home/sambuddho/plt_project/chitra_lancom_4/Block.g 2008-04-22 15:55:37

	//import javalancom.Scope;
	//import javalancom.Symbol;
	import java.util.HashMap;
	import java.util.Set;
	import java.util.Iterator;
	import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
public class BlockParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "NUMBER", "NM", "STRING", "ID", "COMMA", "CHAR", "ICMP_MESSAGE_TYPE", "DOT", "LETTER", "DIGIT", "EscapeSequence", "LINE_COMMENT", "EQUAL", "WHITESPACE", "'prog'", "'endprog'", "';'", "'ifconfig'", "'apply'", "'topology'", "'undo'", "'role'", "'policy'", "'host_group'", "'route'", "'add'", "'delete'", "'to'", "'from'", "'show'", "'numeric'", "'fw'", "'if'", "'('", "')'", "'else'", "'endif'", "'while'", "'endwhile'", "'echo'", "'?'", "':'", "'||'", "'&&'", "'|'", "'&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'~'", "'*='", "'/='", "'+='", "'-='", "'topology_type_t'", "'host_type_t'", "'host_group_type_t'", "'serv_group_type_t'", "'role_type_t'", "'policy_type_t'", "'route_type_t'", "'interface_type_t'", "'ipaddr_t'", "'int_type_t'", "'char_type_t'", "'{'", "'}'", "'netmask'", "'inbound'", "'outbound'", "'allow'", "'deny'", "'udp'", "'tcp'", "'ifname'", "'card_id'", "'ip_addr'", "'host'", "'gw'", "'net'", "'service_set'"
    };
    public static final int LINE_COMMENT=19;
    public static final int LETTER=16;
    public static final int NUMBER=8;
    public static final int CHAR=13;
    public static final int WHITESPACE=21;
    public static final int MULT=6;
    public static final int MINUS=5;
    public static final int ID=11;
    public static final int EOF=-1;
    public static final int COMMA=12;
    public static final int EQUAL=20;
    public static final int PLUS=4;
    public static final int DIGIT=17;
    public static final int DIV=7;
    public static final int NM=9;
    public static final int DOT=15;
    public static final int EscapeSequence=18;
    public static final int ICMP_MESSAGE_TYPE=14;
    public static final int STRING=10;
    public static final String[] ruleNames = new String[] {
        "invalidRule", "prog", "statement_list", "statement", "statement_expr", 
        "config_statement", "route_oper", "set_oper", "config_display", 
        "condition_statement", "iteration_statement", "print_statement", 
        "expression", "assignment_expr", "conditional_expr", "logicalOR_expr", 
        "logicalAND_expr", "bitwiseOR_expr", "bitwiseAND_expr", "equality_expr", 
        "relational_expr", "expr", "term", "unary_expr", "postfix_expression", 
        "assignment_operator", "factor", "literal", "declr_stmt", "object_values", 
        "type_name", "role", "policy", "topology", "int_value", "char_value", 
        "direction", "verdict", "proto", "icmp_cntrl_message", "port", "object_name", 
        "interface_name", "ip_addr", "nmask", "host", "dns_set", "gateway", 
        "host_group", "interf", "route", "serv_group", "serv_listen_port", 
        "host_name"
    };

    public int ruleLevel = 0;
    public BlockParser(TokenStream input, int port) {
            super(input, port);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }

    }
    public BlockParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT);
    }
    public BlockParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);
    }

    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/sambuddho/plt_project/chitra_lancom_4/Block.g"; }


    	Scope globalScope = new Scope(null);
    	Scope currentScope = globalScope;
    	Map<String, Assignment> map = new HashMap<String, Assignment>(); 

        	public static void main(String[] args) throws Exception 
        	{
            	BlockLexer lex = new BlockLexer(new ANTLRFileStream(args[0]));
    	       	CommonTokenStream tokens = new CommonTokenStream(lex);

            	BlockParser parser = new BlockParser(tokens);

    	        try 
    	        {
    	            parser.role();
            	} 
            	catch (RecognitionException e)  
            	{
    	            e.printStackTrace();
            	}
        	}



    // $ANTLR start prog
    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:46:1: prog : 'prog' ( statement_list )+ 'endprog' ;
    public final void prog() throws RecognitionException {
        try { dbg.enterRule("prog");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(46, 1);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:47:2: ( 'prog' ( statement_list )+ 'endprog' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:47:4: 'prog' ( statement_list )+ 'endprog'
            {
            dbg.location(47,4);
            match(input,22,FOLLOW_22_in_prog83); 
            dbg.location(47,11);
            // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:47:11: ( statement_list )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==NUMBER||(LA1_0>=STRING && LA1_0<=ID)||LA1_0==CHAR||(LA1_0>=24 && LA1_0<=26)||(LA1_0>=28 && LA1_0<=29)||(LA1_0>=31 && LA1_0<=34)||(LA1_0>=39 && LA1_0<=41)||LA1_0==45||LA1_0==47||LA1_0==60||(LA1_0>=65 && LA1_0<=75)||(LA1_0>=79 && LA1_0<=80)||LA1_0==85||(LA1_0>=87 && LA1_0<=88)||(LA1_0>=90 && LA1_0<=91)) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:47:11: statement_list
            	    {
            	    dbg.location(47,11);
            	    pushFollow(FOLLOW_statement_list_in_prog85);
            	    statement_list();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(47,27);
            match(input,23,FOLLOW_23_in_prog88); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(48, 3);

        }
        finally {
            dbg.exitRule("prog");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end prog


    // $ANTLR start statement_list
    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:50:2: statement_list : ( statement | declr_stmt );
    public final void statement_list() throws RecognitionException {
        try { dbg.enterRule("statement_list");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(50, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:51:3: ( statement | declr_stmt )
            int alt2=2;
            try { dbg.enterDecision(2);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==NUMBER||(LA2_0>=STRING && LA2_0<=ID)||LA2_0==CHAR||(LA2_0>=24 && LA2_0<=26)||(LA2_0>=28 && LA2_0<=29)||(LA2_0>=31 && LA2_0<=34)||(LA2_0>=39 && LA2_0<=41)||LA2_0==45||LA2_0==47||LA2_0==60||(LA2_0>=79 && LA2_0<=80)||LA2_0==85||(LA2_0>=87 && LA2_0<=88)||(LA2_0>=90 && LA2_0<=91)) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=65 && LA2_0<=75)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("50:2: statement_list : ( statement | declr_stmt );", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:51:5: statement
                    {
                    dbg.location(51,5);
                    pushFollow(FOLLOW_statement_in_statement_list104);
                    statement();
                    _fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:52:6: declr_stmt
                    {
                    dbg.location(52,6);
                    pushFollow(FOLLOW_declr_stmt_in_statement_list111);
                    declr_stmt();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(53, 3);

        }
        finally {
            dbg.exitRule("statement_list");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end statement_list


    // $ANTLR start statement
    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:55:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule("statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(55, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:56:3: ( condition_statement | iteration_statement | statement_expr | print_statement )
            int alt3=4;
            try { dbg.enterDecision(3);

            switch ( input.LA(1) ) {
            case 40:
                {
                alt3=1;
                }
                break;
            case 45:
                {
                alt3=2;
                }
                break;
            case NUMBER:
            case STRING:
            case ID:
            case CHAR:
            case 24:
            case 25:
            case 26:
            case 28:
            case 29:
            case 31:
            case 32:
            case 33:
            case 34:
            case 39:
            case 41:
            case 60:
            case 79:
            case 80:
            case 85:
            case 87:
            case 88:
            case 90:
            case 91:
                {
                alt3=3;
                }
                break;
            case 47:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("55:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:56:5: condition_statement
                    {
                    dbg.location(56,5);
                    pushFollow(FOLLOW_condition_statement_in_statement126);
                    condition_statement();
                    _fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:57:5: iteration_statement
                    {
                    dbg.location(57,5);
                    pushFollow(FOLLOW_iteration_statement_in_statement132);
                    iteration_statement();
                    _fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:58:5: statement_expr
                    {
                    dbg.location(58,5);
                    pushFollow(FOLLOW_statement_expr_in_statement138);
                    statement_expr();
                    _fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:59:5: print_statement
                    {
                    dbg.location(59,5);
                    pushFollow(FOLLOW_print_statement_in_statement144);
                    print_statement();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(60, 3);

        }
        finally {
            dbg.exitRule("statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end statement


    // $ANTLR start statement_expr
    // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );
    public final void statement_expr() throws RecognitionException {
        try { dbg.enterRule("statement_expr");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(62, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_4/Block.g:63:3: ( ';' | expression ';' | config_statement ';' )
            int alt4=3;
            try { dbg.enterDecision(4);

            switch ( input.LA(1) ) {
            case 24:
                {
                alt4=1;
                }
                break;
            case ID:
                {
                int LA4_2 = input.LA(2);

                if ( ((LA4_2>=PLUS && LA4_2<=DIV)||LA4_2==DOT||LA4_2==48||(LA4_2>=50 && LA4_2<=59)) ) {
                    alt4=2;
                }
                else if ( (LA4_2==EQUAL||LA4_2==24||(LA4_2>=61 && LA4_2<=64)) ) {
                    alt4=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 2, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                }
                break;
            case NUMBER:
            case STRING:
            case CHAR:
            case 29:
            case 31:
            case 41:
            case 60:
            case 79:
            case 80:
            case 85:
            case 87:
            case 91:
                {
                alt4=2;
                }
                break;
            case 88:
                {
                int LA4_4 = input.LA(2);

                if ( (LA4_4==NUMBER) ) {
                    int LA4_8 = input.LA(3);

                    if ( (LA4_8==DOT) ) {
                        int LA4_10 = input.LA(4);

                        if ( (LA4_10==NUMBER) ) {
                            int LA4_12 = input.LA(5);

                            if ( (LA4_12==DOT) ) {
                                int LA4_14 = input.LA(6);

                                if ( (LA4_14==NUMBER) ) {
                                    int LA4_16 = input.LA(7);

                                    if ( (LA4_16==DOT) ) {
                                        int LA4_18 = input.LA(8);

                                        if ( (LA4_18==NUMBER) ) {
                                            int LA4_20 = input.LA(9);

                                            if ( (LA4_20==89) ) {
                                                int LA4_22 = input.LA(10);

                                                if ( (LA4_22==NUMBER) ) {
                                                    int LA4_24 = input.LA(11);

                                                    if ( (LA4_24==DOT) ) {
                                                        int LA4_26 = input.LA(12);

                                                        if ( (LA4_26==NUMBER) ) {
                                                            int LA4_28 = input.LA(13);

                                                            if ( (LA4_28==DOT) ) {
                                                                int LA4_30 = input.LA(14);

                                                                if ( (LA4_30==NUMBER) ) {
                                                                    int LA4_32 = input.LA(15);

                                                                    if ( (LA4_32==DOT) ) {
                                                                        int LA4_34 = input.LA(16);

                                                                        if ( (LA4_34==NUMBER) ) {
                                                                            int LA4_36 = input.LA(17);

                                                                            if ( ((LA4_36>=PLUS && LA4_36<=DIV)||LA4_36==DOT||LA4_36==24||LA4_36==48||(LA4_36>=50 && LA4_36<=59)) ) {
                                                                                alt4=2;
                                                                            }
                                                                            else {
                                                                                NoViableAltException nvae =
                                                                                    new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 36, input);

                                                                                dbg.recognitionException(nvae);
                                                                                throw nvae;
                                                                            }
                                                                        }
                                                                        else {
                                                                            NoViableAltException nvae =
                                                                                new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 34, input);

                                                                            dbg.recognitionException(nvae);
                                                                            throw nvae;
                                                                        }
                                                                    }
                                                                    else {
                                                                        NoViableAltException nvae =
                                                                            new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 32, input);

                                                                        dbg.recognitionException(nvae);
                                                                        throw nvae;
                                                                    }
                                                                }
                                                                else {
                                                                    NoViableAltException nvae =
                                                                        new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 30, input);

                                                                    dbg.recognitionException(nvae);
                                                                    throw nvae;
                                                                }
                                                            }
                                                            else {
                                                                NoViableAltException nvae =
                                                                    new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 28, input);

                                                                dbg.recognitionException(nvae);
                                                                throw nvae;
                                                            }
                                                        }
                                                        else {
                                                            NoViableAltException nvae =
                                                                new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 26, input);

                                                            dbg.recognitionException(nvae);
                                                            throw nvae;
                                                        }
                                                    }
                                                    else {
                                                        NoViableAltException nvae =
                                                            new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 24, input);

                                                        dbg.recognitionException(nvae);
                                                        throw nvae;
                                                    }
                                                }
                                                else {
                                                    NoViableAltException nvae =
                                                        new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 22, input);

                                                    dbg.recognitionException(nvae);
                                                    throw nvae;
                                                }
                                            }
                                            else {
                                                NoViableAltException nvae =
                                                    new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 20, input);

                                                dbg.recognitionException(nvae);
                                                throw nvae;
                                            }
                                        }
                                        else {
                                            NoViableAltException nvae =
                                                new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 18, input);

                                            dbg.recognitionException(nvae);
                                            throw nvae;
                                        }
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 16, input);

                                        dbg.recognitionException(nvae);
                                        throw nvae;
                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 14, input);

                                    dbg.recognitionException(nvae);
                                    throw nvae;
                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 12, input);

                                dbg.recognitionException(nvae);
                                throw nvae;
                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 10, input);

                            dbg.recognitionException(nvae);
                            throw nvae;
                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 8, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("62:2: statement_expr : ( ';' | expression ';' | config_statement ';' );", 4, 4, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                }
                break;
            case 90:
                {
                int LA4_5 = input.LA(2);

                if ( (LA4_5==NUMBER) ) {
                    int LA4_9 = input.LA(3);

                    if ( (LA4_9==DOT) ) {
                        int LA4_11 = input.LA(4);

                        if ( (LA4_11==NUMBER) ) {
                            int LA4_13 = input.LA(5);

                            if ( (LA4_13==DOT) ) {
                                int LA4_15 = input.LA(6);

                                if ( (LA4_15==NUMBER) ) {
                                    int LA4_17 = input.LA(7);

                                    if ( (LA4_17==DOT) ) {
                                        int LA4_19 = input.LA(8);

                                        if ( (LA4_19==NUMBER) ) {
                                            int LA4_21 = input.LA(9);

                                            if ( (LA4_21==78) ) {
                                                int LA4_23 = input.LA(10);

                                                if ( (LA4_23==NUMBER) ) {
                                                    int LA4_25 = input.LA(11);

                                                    if ( (LA4_25==DOT) ) {
                                                        int LA4_27 = input.LA(12);

                                                        if ( (LA4_27==NUMBER) ) {
                                                            int LA4_29 = input.LA(13);

                                                            if ( (LA4_29==DOT) ) {
                                                                int LA4_31 = input.LA(14);

                                                                if ( (LA4_31==NUMBER) ) {
                                                                    int LA4_33 = input.LA(15);

                                                                    if ( (LA4_33==DOT) ) {
                                                                        int LA4_35 = input.LA(16);

                                                                        if ( (LA4_35==NUMBER) ) {
                                                                            int LA4_37 = input.LA(17);

                                                                            if ( (LA4_37==89) ) {
                                                                                int LA4_38 = input.LA(18);

                                                                                if ( (LA4_38==NUMBER) ) {
                                                                                    int LA4_39 = input.LA(19);

                                                                                    if ( (LA4_39==DOT) ) {
                                                                                        int LA4_40 = input.LA(20);
